Fixed z-index

--- a/src/MudBlazor/Styles/components/_working.scss
+++ b/src/MudBlazor/Styles/components/_working.scss
@@ -6,7 +6,7 @@
     left: 0px;
     right: 0px;
     bottom: 0px;
-    z-index: calc(var(--mud-zindex-appbar) - 1);
+    z-index: calc(var(--mud-zindex-drawer) - 1);
     background: rgba(255,255,255,0.54);
     display: flex;
     align-items: center;
